Delete the email field for users where it's unnecessary
