# api/GetFriends.go
@@ -15,7 +15,7 @@ import (
 // @Accept json
 // @Produce json
 // @Param Authorization header string true "Bearer token for user authentication"
-// @Success 200 {array} []utils.UserInfo "List of friends"
+// @Success 200 {array} utils.UserEssentials "List of friends"
 // @Failure 401 {object} utils.ErrorResponse "Unauthorized"
 // @Failure 404 {object} utils.ErrorResponse "No friends found"
 // @Failure 500 {object} utils.ErrorResponse "Internal server error"
