# docs/swagger.json
@@ -136,10 +136,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "type": "array",
-                                "items": {
-                                    "$ref": "#/definitions/utils.UserInfo"
-                                }
+                                "$ref": "#/definitions/utils.UserEssentials"
                             }
                         }
                     },
@@ -1030,50 +1027,6 @@
                     }
                 }
             }
-        },
-        "/stats": {
-            "get": {
-                "description": "Retrieves global statistics for the user based on their token",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "stats"
-                ],
-                "summary": "Get user stats",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer token for user authentication",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Global statistics for the user",
-                        "schema": {
-                            "$ref": "#/definitions/utils.GlobalStats"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/utils.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error",
-                        "schema": {
-                            "$ref": "#/definitions/utils.ErrorResponse"
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
@@ -1083,31 +1036,6 @@
                 "error": {
                     "type": "string",
                     "example": "An error occurred"
-                }
-            }
-        },
-        "utils.GlobalStats": {
-            "type": "object",
-            "properties": {
-                "total_activities": {
-                    "type": "integer",
-                    "example": 100
-                },
-                "total_ascent": {
-                    "type": "number",
-                    "example": 2500
-                },
-                "total_descent": {
-                    "type": "number",
-                    "example": 2000
-                },
-                "total_distance": {
-                    "type": "number",
-                    "example": 500.5
-                },
-                "total_time": {
-                    "type": "number",
-                    "example": 120.5
                 }
             }
         },
@@ -1171,7 +1099,7 @@
                     "example": "2025-05-11T08:00:00Z"
                 },
                 "user": {
-                    "$ref": "#/definitions/utils.UserInfo"
+                    "$ref": "#/definitions/utils.UserEssentials"
                 }
             }
         },
@@ -1302,7 +1230,7 @@
                     "example": "2025-05-11T08:00:00Z"
                 },
                 "created_by": {
-                    "$ref": "#/definitions/utils.UserInfo"
+                    "$ref": "#/definitions/utils.UserEssentials"
                 },
                 "description": {
                     "type": "string",
