# utils/structs.go
@@ -27,10 +27,6 @@ type UserEssentials struct {
 	Username string `json:"username" example:"John Doe"`
 }
 
-type Users struct {
-	Users []UserEssentials `json:"users" example:"[{\"id\":\"550e8400-e29b-41d4-a716-446655440000\", \"username\":\"John Doe\"}]"`
-}
-
 type RegisterInput struct {
 	Email    string `json:"email" example:"user@example.com"`
 	Password string `json:"password" example:"strongPassword123"`
@@ -125,12 +121,12 @@ type SessionInfoUpdate struct {
 }
 
 type MemberInfo struct {
-	User        UserInfo          `json:"user"`
+	User        UserEssentials    `json:"user"`
 	SessionInfo SessionInfoUpdate `json:"session_info"`
 	TimeStamp   string            `json:"time_stamp" example:"2025-05-11T08:00:00Z"`
 }
 type SessionInfoResponse struct {
-	CreatedBy   UserInfo       `json:"created_by"`
+	CreatedBy   UserEssentials `json:"created_by"`
 	Description string         `json:"description" example:"Morning hike with friends"`
 	CreatedAt   string         `json:"created_at" example:"2025-05-11T08:00:00Z"`
 	ClosedAt    sql.NullString `json:"closed_at" example:"2025-05-11T09:00:00Z"`
@@ -138,9 +134,9 @@ type SessionInfoResponse struct {
 }
 
 type SessionInfoResponseDoc struct {
-	CreatedBy   UserInfo `json:"created_by"`
-	Description string   `json:"description" example:"Morning hike with friends"`
-	CreatedAt   string   `json:"created_at" example:"2025-05-11T08:00:00Z"`
+	CreatedBy   UserEssentials `json:"created_by"`
+	Description string         `json:"description" example:"Morning hike with friends"`
+	CreatedAt   string         `json:"created_at" example:"2025-05-11T08:00:00Z"`
 	ClosedAt    struct {
 		String string `json:"String" example:"2025-05-11T09:00:00Z"`
 		Valid  bool   `json:"Valid" example:"true"`
